<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ubudu SDK Dev App</string>
    <string name="action_user">Edit User</string>
    <string name="action_authenticate">Authenticate</string>
    <string name="action_geofence">Select Geofences</string>
    <string name="action_beacon">Select Beacons</string>
    <string name="hello_world">Hello world!</string>
    <string name="resetButton">Reset</string>  
    <string name="bluetoothLabel">Bluetooth:</string>  
    <string name="gpsUSLabel">GPS+US:</string>
    <string name="copyrightText">Copyright ©2014 ubudu sas</string>
    <string name="list_geofences">List Geofences</string>
    <string name="list_beaconregions">List Beacon Regions</string>
    <string name="show_log">Show Log</string>
    <string name="show_map">Show Map</string>
    <string name="label_ooauth_access_token">OOAUTH2 Access Token:</string>
    <string name="label_application_list">Application List:</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_erase">Erase</string>
    <string name="button_save">Save</string>
    <string name="label_user_id">User ID:</string>
    <string name="label_user_properties">User Properties:</string>
    <string name="label_user_tags">User Tags:</string>
    
</resources>
