<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

  <TextView
      android:id="@+id/label_user_id"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/label_user_id"
      android:textAppearance="?android:attr/textAppearanceSmall" />

  <EditText
      android:id="@+id/text_user_id"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10" 
      android:inputType="text"
      >
    <requestFocus />
  </EditText>

  <TextView
      android:id="@+id/label_user_properties"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/label_user_properties"
      android:textAppearance="?android:attr/textAppearanceSmall" />
  
  <EditText
      android:id="@+id/text_user_properties"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="0dp"
      android:gravity="top|left"
      android:inputType="textMultiLine"
      android:minLines="6"
      android:scrollbars="vertical"
      android:text=""
      android:textSize="12sp"
      android:textStyle="normal"
      android:typeface="monospace" />
  
  <TextView
      android:id="@+id/label_user_tags"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/label_user_tags"
      android:textAppearance="?android:attr/textAppearanceSmall" />

  <EditText
      android:id="@+id/text_user_tags"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="0dp"
      android:gravity="top|left"
      android:inputType="textMultiLine"
      android:minLines="6"
      android:scrollbars="vertical"
      android:text=""
      android:textSize="12sp"
      android:textStyle="normal"
      android:typeface="monospace" />
  <View
      android:layout_width="1dp"
      android:layout_height="10dp" >
  </View>


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content" >

    <Button
        android:id="@+id/cancel_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel" 
        android:onClick="onCancelUser"
        />

    <View
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </View>
    
    <Button
        android:id="@+id/erase_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_erase" 
        android:onClick="onEraseUser"
        />
    
    <View
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </View>

    <Button
        android:id="@+id/validate_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save" 
        android:onClick="onSaveUser"
        />

  </LinearLayout>
  
</LinearLayout>
