<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="fill_vertical|fill_horizontal"
                tools:context=".MainActivity" >

  <!-- android:paddingBottom="@dimen/activity_vertical_margin" -->
  <!-- android:paddingLeft="@dimen/activity_horizontal_margin" -->
  <!-- android:paddingRight="@dimen/activity_horizontal_margin" -->
  <!-- android:paddingTop="@dimen/activity_vertical_margin" -->

  <LinearLayout
      android:id="@+id/linearLayout1"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_alignParentBottom="true"
      android:layout_alignParentRight="true"
      android:layout_margin="0dp"
      android:background="#706380"
      android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:orientation="horizontal" >

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="4dp"
          android:layout_marginRight="4dp"
          android:orientation="vertical" >

        <Switch
            android:id="@+id/toggleGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:enabled="true"
            android:clickable="true"
            android:longClickable="false"
            android:onClick="onGPSToggled"
            android:text="@string/gpsUSLabel"
            android:textColor="#FFFFFF" />

        <Switch
            android:id="@+id/toggleBluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:enabled="false"
            android:clickable="false"
            android:longClickable="false"
            android:onClick="onBluetoothToogled"
            android:text="@string/bluetoothLabel"
            android:textColor="#FFFFFF" />

      </LinearLayout>

      <Button
          android:id="@+id/buttonReset"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="right|center_vertical"
          android:text="@string/resetButton" 
          android:onClick="onResetButton"
          />

    </LinearLayout>

    <ViewSwitcher
        android:id="@+id/mainViewSwitcher"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.3"
        android:background="#444444" >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center_vertical|center_horizontal"
          android:orientation="vertical" >

        <ImageButton
            android:id="@+id/buttonGPSAdvertizing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Activate GPS+US."
            android:onClick="onGPSAdvertizingSelected"
            android:src="@drawable/radar" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Choose what type of advertising you want."
            android:text="Choose what type of advertising you want"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF" />

        <ImageButton
            android:id="@+id/buttonBluetoothAdvertizing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:contentDescription="Activate uBeacon"
            android:longClickable="false"
            android:onClick="onBluetoothAdvertizingSelected"
            android:src="@drawable/bluetooth" />

      </LinearLayout>


      <fragment
          android:id="@+id/map"
          android:name="com.google.android.gms.maps.MapFragment"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />

    </ViewSwitcher>

    <LinearLayout
        android:id="@+id/output_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.7"
        android:orientation="horizontal"
        >
      <TextView
          android:id="@+id/outputText"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:layout_marginBottom="0dp"
          android:background="#000000"
          android:foreground="#ffffff"
          android:minLines="6"
          android:scrollbars="vertical"
          android:text=""
          android:textColor="#FFFFFF"
          android:textSize="12sp"
          android:textStyle="normal"
          android:typeface="monospace" />
    </LinearLayout>
    

  </LinearLayout>

  <TextView
      android:id="@+id/copyrightText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_marginBottom="0dp"
      android:text="@string/copyrightText"
      android:textColor="#444444" />

</RelativeLayout>
